--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h2>Welcome to F&M</h2>
+    <nav>
+        <h2 class="logo">F&M</h2>
+        <ul>
+            <li>Women</li>
+            <li>Men</li>
+            <li>Kids</li>
+            <li>Home</li>
+        </ul>
+    </nav>
     
 </body>
 </html>
