bootstrap & font-awesome links

--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>F&M</title>
     <script src="/assets/js/app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Welcome to F&M</h2>
     <nav>
-        <h2 class="logo">F&M</h2>
-        <ul>
-            <li>Women</li>
-            <li>Men</li>
-            <li>Kids</li>
-            <li>Home</li>
-        </ul>
+      <h2 class="logo">F&M</h2>
+      <ul>
+        <li>Women</li>
+        <li>Men</li>
+        <li>Kids</li>
+        <li>Home</li>
+      </ul>
     </nav>
-    
-</body>
+  </body>
 </html>
