navbar structure H&M inspired

--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
     <h2>Welcome to F&M</h2>
     <nav>
       <h2 class="logo">F&M</h2>
+      <i class="bi bi-list"></i>
       <ul>
         <li>Women</li>
         <li>Men</li>
         <li>Kids</li>
         <li>Home</li>
       </ul>
+      <div class="user-actions">
+        <i class="bi bi-search"></i>
+        <i class="bi bi-person"></i>
+        <i class="bi bi-heart"></i>
+        <i class="bi bi-bag"></i>
+      </div>
+      <select name="lang" id="lang">
+        <option value="eng">EN</option>
+        <option value="ar">AR</option>
+      </select>
     </nav>
   </body>
 </html>
