--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <script src="/assets/js/app.js"></script>
   </head>
   <body>
-    <h2>Welcome to F&M</h2>
     <nav>
-      <h2 class="logo">F&M</h2>
-      <i class="bi bi-list"></i>
+        <div class="logo-section">
+            <h2 class="logo">F&M</h2>
+            <i class="bi bi-list"></i>
+
+        </div>
       <ul>
         <li>Women</li>
         <li>Men</li>
@@ -34,11 +36,11 @@
         <i class="bi bi-person"></i>
         <i class="bi bi-heart"></i>
         <i class="bi bi-bag"></i>
+        <select name="lang" id="lang">
+          <option value="eng">EN</option>
+          <option value="ar">AR</option>
+        </select>
       </div>
-      <select name="lang" id="lang">
-        <option value="eng">EN</option>
-        <option value="ar">AR</option>
-      </select>
     </nav>
   </body>
 </html>
