icons have been styled

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         <li>Home</li>
       </ul>
       <div class="user-actions">
-        <i class="bi bi-search"></i>
-        <i class="bi bi-person"></i>
-        <i class="bi bi-heart"></i>
-        <i class="bi bi-bag"></i>
+        <div class="icons">
+          <i class="bi bi-search"></i>
+          <i class="bi bi-person"></i>
+          <i class="bi bi-heart"></i>
+          <i class="bi bi-bag"></i>
+        </div>
         <select name="lang" id="lang">
           <option value="eng">EN</option>
           <option value="ar">AR</option>
