nav list styled updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <i class="bi bi-list"></i>
 
         </div>
-      <ul>
+      <ul class="list">
         <li>Women</li>
         <li>Men</li>
         <li>Kids</li>
