--- a/index.html
+++ b/index.html
@@ -19,29 +19,36 @@
     <script src="/assets/js/app.js"></script>
   </head>
   <body>
-    <nav>
-        <div class="logo-section">
-            <h2 class="logo">F&M</h2>
-            <i class="bi bi-list"></i>
+    <div class="hero-section">
+      <nav>
+          <div class="logo-section">
+              <h2 class="logo">F&M</h2>
+              <i class="bi bi-list"></i>
+          </div>
+        <ul class="list">
+          <li>Women</li>
+          <li>Men</li>
+          <li>Kids</li>
+          <li>Home</li>
+        </ul>
+        <div class="user-actions">
+          <div class="icons">
+            <i class="bi bi-search"></i>
+            <i class="bi bi-person"></i>
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-bag"></i>
+          </div>
+          <select name="lang" id="lang">
+            <option value="eng">EN</option>
+            <option value="ar">AR</option>
+          </select>
         </div>
-      <ul class="list">
-        <li>Women</li>
-        <li>Men</li>
-        <li>Kids</li>
-        <li>Home</li>
-      </ul>
-      <div class="user-actions">
-        <div class="icons">
-          <i class="bi bi-search"></i>
-          <i class="bi bi-person"></i>
-          <i class="bi bi-heart"></i>
-          <i class="bi bi-bag"></i>
-        </div>
-        <select name="lang" id="lang">
-          <option value="eng">EN</option>
-          <option value="ar">AR</option>
-        </select>
-      </div>
-    </nav>
+      </nav>
+      <main>
+        <p>New Styles Added</p>
+        <p>Buy Two & Get One Free Now!!</p>
+      </main>
+    </div>
+    
   </body>
 </html>
