tagline has been styled

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         </div>
       </nav>
       <main>
-        <p>New Styles Added</p>
-        <p>Buy Two & Get One Free Now!!</p>
+        <div class="tagline">
+          <p>New Styles Added</p>
+          <p>Buy Two & Get One Free Now!!</p>
+        </div>
       </main>
     </div>
     
