newsletter signin btn has been added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </div>
       </main>
     </div>
+    <!-- ! fixed btn for newsletter sign in -->
+     <button class="newsletter-btn">
+      <i class="bi bi-chat-dots"></i>
+     </button>
     
   </body>
 </html>
