newsletter btn js | wrong target

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>F&M</title>
-    <script src="/assets/js/app.js"></script>
+    <script src="/assets/js/app.js" defer></script>
+    <script src="/assets/js/newsletter.js" defer></script>
   </head>
   <body>
     <div class="hero-section">
@@ -52,7 +53,7 @@
       </main>
     </div>
     <!-- ! fixed btn for newsletter sign in -->
-     <button class="newsletter-btn">
+     <button class="newsletter-btn" id="newsLetterBtn">
       <i class="bi bi-chat-dots"></i>
      </button>
     
