switched to fa icons

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <!-- ! fixed btn for newsletter sign in -->
      <button class="newsletter-btn" id="newsLetterBtn">
-      <i class="bi bi-chat-dots"></i>
+      <i class="fa-regular fa-comment-dots"></i>
      </button>
     
   </body>
