--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
      <button class="newsletter-btn" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
      </button>
+     <!-- ! the news letter fixed container -->
+      <div class="newletter-container">
+        <div class="newsletter-header">A</div>
+        <div class="newsletter-body">B</div>
+        <div class="newsletter-input">C</div>
+      </div>
     
   </body>
 </html>
