newsletter hidden functionality is working

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <i class="fa-regular fa-comment-dots"></i>
      </button>
      <!-- ! the news letter fixed container -->
-      <div class="newletter-container">
+      <div class="newletter-container hidden" id="newsLetterContainer">
         <div class="newsletter-header">A</div>
         <div class="newsletter-body">B</div>
         <div class="newsletter-input">C</div>
