newletter header has been styled

--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
      </button>
      <!-- ! the news letter fixed container -->
       <div class="newletter-container hidden" id="newsLetterContainer">
-        <div class="newsletter-header">A</div>
+        <div class="newsletter-header">
+          <button>
+            <i class="fa-solid fa-arrow-left-long"></i>
+          </button>
+              <h2 class="logo">F&M</h2>
+              <h4>Customer Support</h4>
+        </div>
         <div class="newsletter-body">B</div>
         <div class="newsletter-input">C</div>
       </div>
