newletter input | outline none

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
               <h2 class="logo">F&M</h2>
               <h4>Customer Support</h4>
         </div>
-        <div class="newsletter-body">B</div>
-        <div class="newsletter-input">C</div>
+        <div class="newsletter-body">
+        </div>
+        <div class="newsletter-input">
+          <input type="text" placeholder="Type here...">
+        </div>
       </div>
     
   </body>
