--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
         <div class="newsletter-input">
           <input type="text" placeholder="Type here...">
+          <i class="fa-solid fa-paper-plane send-icon"></i>
         </div>
       </div>
     
