exit exitNewsLetter functionality

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
      <!-- ! the news letter fixed container -->
       <div class="newletter-container hidden" id="newsLetterContainer">
         <div class="newsletter-header">
-          <button>
+          <button id="exitNewsLetter">
             <i class="fa-solid fa-arrow-left-long"></i>
           </button>
               <h2 class="logo">F&M</h2>
