fixing the inner border-radius issue using OFERFLOW HIDDEN

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <i class="fa-solid fa-paper-plane send-icon"></i>
         </div>
       </div>
+
+      <!-- !next section -->
     
   </body>
 </html>
