--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       </div>
 
       <!-- !next section -->
+       <div class="model-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
     
   </body>
 </html>
