--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
       <!-- !next section -->
        <div class="model-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+       <div class="products-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
     
   </body>
 </html>
