--- a/index.html
+++ b/index.html
@@ -74,8 +74,22 @@
       </div>
 
       <!-- !next section -->
-       <div class="model-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
-       <div class="products-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+       <div class="model-container">
+        <img src="/assets/imgs/models/blueberry-winter.jpg" alt="blueberry">
+      </div>
+       <div class="products-container">
+        <img src="/assets/imgs/shoes/hot-chick.jpg" alt="">
+        <img src="/assets/imgs/shoes/hot-chick1.jpg" alt="">
+        <img src="/assets/imgs/shoes/loubi-queen.jpg" alt="">
+        <img src="/assets/imgs/shoes/MARIE-LOUISE-CHRISTMAS-GIFT-GUIDE-DESKTOP_2.jpg" alt="">
+        <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="">
+        <img src="/assets/imgs/shoes/pigalle-vs-bag.jpg" alt="">
+        <img src="/assets/imgs/shoes/pigalle.jpg" alt="">
+        <img src="/assets/imgs/shoes/sa.jpg" alt="">
+        <img src="/assets/imgs/shoes/white-alta.jpg" alt="">
+        <img src="/assets/imgs/shoes/white-sa.jpg" alt="">
+        <img src="/assets/imgs/shoes/white-sa2.jpg" alt="">
+       </div>
     
   </body>
 </html>
