another model pic has been added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <!-- !next section -->
        <div class="model-container">
         <img src="/assets/imgs/models/blueberry-winter.jpg" alt="blueberry">
+        <img src="/assets/imgs/models/mad.jpeg" alt="mad">
       </div>
        <div class="products-container">
         <img src="/assets/imgs/shoes/hot-chick.jpg" alt="">
