cto has been added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </div>
       </main>
     </div>
+    <div class="cto">
+      <p>Offer ends soon!</p>
+      <p><a href="#">Shop Now +</a></p>
+    </div>
     <!-- ! fixed btn for newsletter sign in -->
      <button class="newsletter-btn" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
