padding fixed | another cto added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <body>
     <div class="hero-section">
       <nav>
-          <div class="logo-section">
-              <h2 class="logo">F&M</h2>
-              <i class="bi bi-list"></i>
-          </div>
+        <div class="logo-section">
+          <h2 class="logo">F&M</h2>
+          <i class="bi bi-list"></i>
+        </div>
         <ul class="list">
           <li>Women</li>
           <li>Men</li>
@@ -57,44 +57,49 @@
       <p><a href="#">Shop Now +</a></p>
     </div>
     <!-- ! fixed btn for newsletter sign in -->
-     <button class="newsletter-btn" id="newsLetterBtn">
+    <button class="newsletter-btn" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
-     </button>
-     <!-- ! the news letter fixed container -->
-      <div class="newletter-container hidden" id="newsLetterContainer">
-        <div class="newsletter-header">
-          <button id="exitNewsLetter">
-            <i class="fa-solid fa-arrow-left-long"></i>
-          </button>
-              <h2 class="logo">F&M</h2>
-              <h4>Customer Support</h4>
-        </div>
-        <div class="newsletter-body">
-        </div>
-        <div class="newsletter-input">
-          <input type="text" placeholder="Type here...">
-          <i class="fa-solid fa-paper-plane send-icon"></i>
-        </div>
+    </button>
+    <!-- ! the news letter fixed container -->
+    <div class="newletter-container hidden" id="newsLetterContainer">
+      <div class="newsletter-header">
+        <button id="exitNewsLetter">
+          <i class="fa-solid fa-arrow-left-long"></i>
+        </button>
+        <h2 class="logo">F&M</h2>
+        <h4>Customer Support</h4>
       </div>
+      <div class="newsletter-body"></div>
+      <div class="newsletter-input">
+        <input type="text" placeholder="Type here..." />
+        <i class="fa-solid fa-paper-plane send-icon"></i>
+      </div>
+    </div>
 
-      <!-- !next section -->
-       <div class="model-container">
-        <img src="/assets/imgs/models/blueberry-winter.jpg" alt="blueberry">
-        <img src="/assets/imgs/models/mad.jpeg" alt="mad">
-      </div>
-       <div class="products-container">
-        <img src="/assets/imgs/shoes/hot-chick.jpg" alt="">
-        <img src="/assets/imgs/shoes/hot-chick1.jpg" alt="">
-        <img src="/assets/imgs/shoes/loubi-queen.jpg" alt="">
-        <img src="/assets/imgs/shoes/MARIE-LOUISE-CHRISTMAS-GIFT-GUIDE-DESKTOP_2.jpg" alt="">
-        <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="">
-        <img src="/assets/imgs/shoes/pigalle-vs-bag.jpg" alt="">
-        <img src="/assets/imgs/shoes/pigalle.jpg" alt="">
-        <img src="/assets/imgs/shoes/sa.jpg" alt="">
-        <img src="/assets/imgs/shoes/white-alta.jpg" alt="">
-        <img src="/assets/imgs/shoes/white-sa.jpg" alt="">
-        <img src="/assets/imgs/shoes/white-sa2.jpg" alt="">
-       </div>
-    
+    <!-- !next section -->
+    <div class="model-container">
+      <img src="/assets/imgs/models/blueberry-winter.jpg" alt="blueberry" />
+      <img src="/assets/imgs/models/mad.jpeg" alt="mad" />
+    </div>
+    <div class="cto">
+      <p>New in</p>
+      <p><a href="#">View all</a></p>
+    </div>
+    <div class="products-container">
+      <img src="/assets/imgs/shoes/hot-chick.jpg" alt="" />
+      <img src="/assets/imgs/shoes/hot-chick1.jpg" alt="" />
+      <img src="/assets/imgs/shoes/loubi-queen.jpg" alt="" />
+      <img
+        src="/assets/imgs/shoes/MARIE-LOUISE-CHRISTMAS-GIFT-GUIDE-DESKTOP_2.jpg"
+        alt=""
+      />
+      <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="" />
+      <img src="/assets/imgs/shoes/pigalle-vs-bag.jpg" alt="" />
+      <img src="/assets/imgs/shoes/pigalle.jpg" alt="" />
+      <img src="/assets/imgs/shoes/sa.jpg" alt="" />
+      <img src="/assets/imgs/shoes/white-alta.jpg" alt="" />
+      <img src="/assets/imgs/shoes/white-sa.jpg" alt="" />
+      <img src="/assets/imgs/shoes/white-sa2.jpg" alt="" />
+    </div>
   </body>
 </html>
