the aside bar has been added

--- a/index.html
+++ b/index.html
@@ -52,15 +52,22 @@
         </div>
       </main>
     </div>
+    <!-- ? comments with ? mark means that they don't naturally exist in the html unless provoked -->
+
+    <!-- ? aside serach bar -->
+    <aside>This is the aside bar</aside>
     <div class="cto">
       <p>Offer ends soon!</p>
       <p><a href="#">Shop Now +</a></p>
     </div>
+
+    <!-- ! -->
     <!-- ! fixed btn for newsletter sign in -->
     <button class="newsletter-btn" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
     </button>
-    <!-- ! the news letter fixed container -->
+
+    <!-- ? the news letter fixed container -->
     <div class="newletter-container hidden" id="newsLetterContainer">
       <div class="newsletter-header">
         <button id="exitNewsLetter">
