multiple css files | gotta be carful with the names of the classes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/vars.css">
+    <link rel="stylesheet" href="/assets/css/aside.css">
     <title>F&M</title>
     <script src="/assets/js/app.js" defer></script>
     <script src="/assets/js/newsletter.js" defer></script>
