fixing the top of search bar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <!-- ? comments with ? mark means that they don't naturally exist in the html unless provoked -->
 
     <!-- ? aside serach bar -->
-    <aside>This is the aside bar</aside>
+    <aside class="search-side-bar">This is the aside bar</aside>
+
+
     <div class="cto">
       <p>Offer ends soon!</p>
       <p><a href="#">Shop Now +</a></p>
