search js has been created

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>F&M</title>
     <script src="/assets/js/app.js" defer></script>
     <script src="/assets/js/newsletter.js" defer></script>
+    <script src="/assets/js/search.js" defer></script>
   </head>
   <body>
     <div class="hero-section">
@@ -36,7 +37,7 @@
         </ul>
         <div class="user-actions">
           <div class="icons">
-            <i class="bi bi-search"></i>
+            <i class="bi bi-search" id="searchIcon"></i>
             <i class="bi bi-person"></i>
             <i class="bi bi-heart"></i>
             <i class="bi bi-bag"></i>
