--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- ? comments with ? mark means that they don't naturally exist in the html unless provoked -->
 
     <!-- ? aside serach bar -->
-    <aside class="search-side-bar">This is the aside bar</aside>
+    <aside class="search-side-bar" id="searchSideBar">This is the aside bar</aside>
 
 
     <div class="cto">
