the isue was declaring the same const twice in two different js files

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- ! -->
     <!-- ! fixed btn for newsletter sign in -->
-    <button class="newsletter-btn" id="newsLetterBtn">
+    <button class="newsletter-btn hidden" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
     </button>
 
