js fixed | never share dom element amongst files. Use one main modules for import

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <link rel="stylesheet" href="/assets/css/vars.css">
     <link rel="stylesheet" href="/assets/css/aside.css">
     <title>F&M</title>
-    <script src="/assets/js/app.js" defer></script>
-    <script src="/assets/js/newsletter.js" defer></script>
-    <script src="/assets/js/search.js" defer></script>
+    <script type="module" src="/assets/js/main.js" defer></script>
   </head>
   <body>
     <div class="hero-section">
