--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- ? comments with ? mark means that they don't naturally exist in the html unless provoked -->
 
     <!-- ? aside serach bar -->
-    <aside class="search-side-bar" id="searchSideBar">This is the aside bar</aside>
+    <aside class="search-side-bar hidden" id="searchSideBar">This is the aside bar</aside>
 
 
     <div class="cto">
@@ -66,7 +66,7 @@
 
     <!-- ! -->
     <!-- ! fixed btn for newsletter sign in -->
-    <button class="newsletter-btn hidden" id="newsLetterBtn">
+    <button class="newsletter-btn" id="newsLetterBtn">
       <i class="fa-regular fa-comment-dots"></i>
     </button>
 
