--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
     <!-- ? comments with ? mark means that they don't naturally exist in the html unless provoked -->
 
     <!-- ? aside serach bar -->
-    <aside class="search-side-bar hidden" id="searchSideBar">This is the aside bar</aside>
+    <aside class="search-side-bar hidden" id="searchSideBar">
+      This is the aside bar
+      <div class="search-input">
+        <input type="text" placeholder="search...">
+      </div>
+    </aside>
 
 
     <div class="cto">
