styling the input & placeholder | ::placeholder psuedo class

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       This is the aside bar
       <div class="search-input">
         <input type="text" placeholder="search...">
+        <i class="fa-solid fa-xmark"></i>
       </div>
     </aside>
 
