--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       This is the aside bar
       <div class="search-input">
         <input type="text" placeholder="search...">
-        <i class="fa-solid fa-xmark"></i>
+        <i class="fa-solid fa-xmark" id="closeSearchBar"></i>
       </div>
     </aside>
 
