--- a/index.html
+++ b/index.html
@@ -94,21 +94,22 @@
     <!-- !next section -->
     <div class="model-container">
       <img src="/assets/imgs/models/blueberry-winter.jpg" alt="blueberry" />
-      <img src="/assets/imgs/models/mad.jpeg" alt="mad" />
+      <!-- <img src="/assets/imgs/models/mad.jpeg" alt="mad" /> -->
+       <img src="/assets/imgs/models/hot-chick-pose2.jpeg" alt="">
     </div>
     <div class="cto">
       <p>New in</p>
       <p><a href="#">View all</a></p>
     </div>
     <div class="products-container">
-      <img src="/assets/imgs/shoes/hot-chick.jpg" alt="" />
+      <!-- <img src="/assets/imgs/shoes/hot-chick.jpg" alt="" /> -->
       <img src="/assets/imgs/shoes/hot-chick1.jpg" alt="" />
-      <img src="/assets/imgs/shoes/loubi-queen.jpg" alt="" />
+      <!-- <img src="/assets/imgs/shoes/loubi-queen.jpg" alt="" /> -->
       <img
         src="/assets/imgs/shoes/MARIE-LOUISE-CHRISTMAS-GIFT-GUIDE-DESKTOP_2.jpg"
         alt=""
       />
-      <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="" />
+      <!-- <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="" /> -->
       <img src="/assets/imgs/shoes/pigalle-vs-bag.jpg" alt="" />
       <img src="/assets/imgs/shoes/pigalle.jpg" alt="" />
       <img src="/assets/imgs/shoes/sa.jpg" alt="" />
