some effects when hovering on img

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
       />
       <!-- <img src="/assets/imgs/shoes/miss-z-sandal.jpg" alt="" /> -->
       <img src="/assets/imgs/shoes/pigalle-vs-bag.jpg" alt="" />
-      <img src="/assets/imgs/shoes/pigalle.jpg" alt="" />
+      <!-- <img src="/assets/imgs/shoes/pigalle.jpg" alt="" /> -->
+
+      <img src="/assets/imgs/models/pigalle-pose.png" alt="">
       <img src="/assets/imgs/shoes/sa.jpg" alt="" />
       <img src="/assets/imgs/shoes/white-alta.jpg" alt="" />
       <img src="/assets/imgs/shoes/white-sa.jpg" alt="" />
