we have to import it in the module duh

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="icons">
             <i class="bi bi-search" id="searchIcon"></i>
             <i class="bi bi-person"></i>
-            <i class="bi bi-heart"></i>
+            <i class="bi bi-heart" id="favoriteIcon"></i>
             <i class="bi bi-bag"></i>
           </div>
           <select name="lang" id="lang">
