view all products html has been added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="cto">
       <p>New in</p>
-      <p><a href="#">View all</a></p>
+      <p><a href="/assets/templates/products.html">View all</a></p>
     </div>
     <div class="products-container">
       <!-- <img src="/assets/imgs/shoes/hot-chick.jpg" alt="" /> -->
