new shoes added

--- a/index.html
+++ b/index.html
@@ -114,10 +114,14 @@
       <!-- <img src="/assets/imgs/shoes/pigalle.jpg" alt="" /> -->
 
       <img src="/assets/imgs/models/pigalle-pose.png" alt="">
-      <img src="/assets/imgs/shoes/sa.jpg" alt="" />
-      <img src="/assets/imgs/shoes/white-alta.jpg" alt="" />
-      <img src="/assets/imgs/shoes/white-sa.jpg" alt="" />
-      <img src="/assets/imgs/shoes/white-sa2.jpg" alt="" />
+      <!-- <img src="/assets/imgs/shoes/sa.jpg" alt="" /> -->
+      <img src="/assets/imgs/shoes/_ (10).jpeg" alt="">
+      <img src="/assets/imgs/shoes/_ (11).jpeg" alt="">
+      <img src="/assets/imgs/shoes/_ (13).jpeg" alt="">
+
+      <!-- <img src="/assets/imgs/shoes/white-alta.jpg" alt="" /> -->
+      <!-- <img src="/assets/imgs/shoes/white-sa.jpg" alt="" /> -->
+      <!-- <img src="/assets/imgs/shoes/white-sa2.jpg" alt="" /> -->
     </div>
   </body>
 </html>
